# cisc3027-project

./: .gitignore  README.md  pyproject.toml
artifacts/: UNet ClinicDB Loss.txt
notebooks/: clinicdb.ipynb  test.ipynb  test2.ipynb  vnet.ipynb
src/project/: lr.py  training.py  types.py
src/project/clinicDB_test_ted/: preprocess.py
src/project/data/: cvc_clinic.py  luna_dataset.py  preprocess_luna.py
src/project/models/: shufflenet.py  unet3d.py
src/project/models/attention_unet/: 3d_attention_unet.py  BuildingBlocks.py  __init__.py
src/project/models/unet/: unet_model.py  unet_parts.py
src/project/models/vnet/: LICENSE  vnet.py
src/project/network_architecture/: generic_UNetPlusPlus.py
src/project/visualization/: loss.py
src/project/vnet/: netblocks.py  vnet.py
