[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.4.21",
    "gradio==3.50.2",
    "imageio>=2.36.0",
    "labml-helpers>=0.4.89",
    "labml-nn>=0.4.135",
    "labml>=0.5.3",
    "metaimageio>=1.2.2",
    "notebook>=7.2.2",
    "numpy<2",
    "pip>=24.3.1",
    "pyright>=1.1.387",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "supervision>=0.24.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
pythonVersion = "3.12"
