[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.4.21",
    "gradio==3.50.2",
    "imageio>=2.36.0",
    "ipywidgets>=8.1.5",
    "jaxtyping>=0.2.36",
    "jupyter>=1.1.1",
    "labml-helpers>=0.4.89",
    "labml-nn>=0.4.135",
    "labml>=0.5.3",
    "metaimageio>=1.2.2",
    "numpy<2",
    "pip>=24.3.1",
    "plotly>=5.24.1",
    "pydicom>=3.0.1",
    "pyright>=1.1.387",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "segmentation-models-3d>=1.1.1",
    "simpleitk>=2.4.0",
    "supervision>=0.24.0",
    "tensorflow>=2.17.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.1",
    "keras>=3.3.3",
    "wandb>=0.18.7",
    "torchio>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
pythonVersion = "3.12"
